--- a/css/styles.css
+++ b/css/styles.css
@@ -436,7 +436,7 @@ body {
   background-image: url("../images/Feb12-25-PrettyGirl-sleep-big.jpg");
 }
 .example-slider .fnc-slide-3 .fnc-slide__inner:before {
-  content: "";
+  content: "../images/blue-eyed-girl.jpg";
   position: absolute;
   left: 0;
   top: 0;
