--- a/css/styles.css
+++ b/css/styles.css
@@ -432,9 +432,10 @@ body {
 .example-slider .fnc-slide-2 .fnc-slide__mask-inner {
   background-image: url("../images/Feb-2025-Ronnie-Bubbies-photogenic-big.jpg");
 }
+/**  background-image: url("../images/Feb12-25-PrettyGirl-sleep-big.jpg");  */
 .example-slider .fnc-slide-3 .fnc-slide__inner,
 .example-slider .fnc-slide-3 .fnc-slide__mask-inner {
-  background-image: url("../images/Feb12-25-PrettyGirl-sleep-big.jpg");
+  background-image: url("../images/image002.jpg");
 }
 .example-slider .fnc-slide-3 .fnc-slide__inner:before {
   content: "../images/Feb12-25-PrettyGirl-sleep-big.jpg";
