--- a/css/styles.css
+++ b/css/styles.css
@@ -433,12 +433,13 @@ body {
   background-image: url("../images/Feb-2025-Ronnie-Bubbies-photogenic-big.jpg");
 }
 /**  background-image: url("../images/Feb12-25-PrettyGirl-sleep-big.jpg");  */
+/**  content: "../images/Feb12-25-PrettyGirl-sleep-big.jpg";  */
 .example-slider .fnc-slide-3 .fnc-slide__inner,
 .example-slider .fnc-slide-3 .fnc-slide__mask-inner {
   background-image: url("../images/image002.jpg");
 }
 .example-slider .fnc-slide-3 .fnc-slide__inner:before {
-  content: "../images/Feb12-25-PrettyGirl-sleep-big.jpg";
+  content: "../images/image002.jpg";
   position: absolute;
   left: 0;
   top: 0;
