--- a/css/styles.css
+++ b/css/styles.css
@@ -426,21 +426,21 @@ body {
 /**  background-image: url("../images/feb12-2025-PrettyGirl-Bubbies-Sleeping-big.jpg"); */
 .example-slider .fnc-slide-1 .fnc-slide__inner,
 .example-slider .fnc-slide-1 .fnc-slide__mask-inner {
-  background-image: url("../images/image001.png");
+  background-image: url("../images/image001-01.jpg");
 }
 /**  background-image: url("../images/Feb-2025-Ronnie-Bubbies-photogenic-big.jpg");  */
 .example-slider .fnc-slide-2 .fnc-slide__inner,
 .example-slider .fnc-slide-2 .fnc-slide__mask-inner {
-  background-image: url("../images/image003.jpg");
+  background-image: url("../images/image001-02.jpg");
 }
 /**  background-image: url("../images/Feb12-25-PrettyGirl-sleep-big.jpg");  */
 /**  content: "../images/Feb12-25-PrettyGirl-sleep-big.jpg";  */
 .example-slider .fnc-slide-3 .fnc-slide__inner,
 .example-slider .fnc-slide-3 .fnc-slide__mask-inner {
-  background-image: url("../images/image002.png");
+  background-image: url("../images/image001-03.jpg");
 }
 .example-slider .fnc-slide-3 .fnc-slide__inner:before {
-  content: "../images/image002.jpg";
+  content: "../images/image001-02.jpg";
   position: absolute;
   left: 0;
   top: 0;
@@ -451,11 +451,11 @@ body {
 /**  background-image: url("../images/PrettyGirl-coveringNose-big.jpg");  */
 .example-slider .fnc-slide-4 .fnc-slide__inner,
 .example-slider .fnc-slide-4 .fnc-slide__mask-inner {
-  background-image: url("../images/image004.png");
+  background-image: url("../images/image001-04.jpg");
 }
 /**  content: "../images/PrettyGirl-coveringNose-big.jpg";  */
 .example-slider .fnc-slide-4 .fnc-slide__inner:before {
-  content: "../images/image004.png";
+  content: "../images/image001-04.jpg";
   position: absolute;
   left: 0;
   top: 0;
