--- a/css/styles.css
+++ b/css/styles.css
@@ -426,7 +426,7 @@ body {
 /**  background-image: url("../images/feb12-2025-PrettyGirl-Bubbies-Sleeping-big.jpg"); */
 .example-slider .fnc-slide-1 .fnc-slide__inner,
 .example-slider .fnc-slide-1 .fnc-slide__mask-inner {
-  background-image: url("../images/image011-01.jpg");
+  background-image: url("../images/image011-01-b.jpg");
 }
 /**  background-image: url("../images/Feb-2025-Ronnie-Bubbies-photogenic-big.jpg");  */
 .example-slider .fnc-slide-2 .fnc-slide__inner,
